[gd_scene load_steps=14 format=2]

[ext_resource path="res://NPCs/Professor.png" type="Texture" id=1]
[ext_resource path="res://Player/Keys.png" type="Texture" id=2]
[ext_resource path="res://NPCs/NPC Teacher.gd" type="Script" id=3]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "WalkingRight",
"speed": 6.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 16.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 4.0
height = 4.0

[node name="NPC Student" type="Area2D"]
script = ExtResource( 3 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
offset = Vector2( 0, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 9 )
frames = SubResource( 7 )
animation = "WalkingRight"
offset = Vector2( 0, -18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11 )
shape = SubResource( 8 )

[node name="KeySprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 2 )
hframes = 5
vframes = 8
frame = 4

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 0, 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -9 )
rotation = 1.5708
shape = SubResource( 9 )

[connection signal="body_entered" from="." to="." method="_on_NPC_Student_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_NPC_Student_body_exited"]
